# orthanc-saola

./: CMakeLists.txt  README.txt  orthanc.json
Sources/: AppConfiguration.h  Constants.h  ExporterJob.cpp  ExporterJob.h  FailedJobDTOCreate.h  FailedJobDTOGet.h  FailedJobFilter.h  FailedJobScheduler.cpp  FailedJobScheduler.h  HierarchicalDirWriter.cpp  InMemoryJobCache.h  IndexerDatabase.cpp  IndexerDatabase.h  JobHandler.cpp  JobHandler.h  MyScripts.lua  Notification.cpp  Pagination.h  Plugin.cpp  PluginIndex.cpp  PluginIndex.h  PrepareDatabase.sql  RemoveFileScheduler.cpp  RemoveFileScheduler.h  RestApi.cpp  RestApi.h  SaolaConfiguration.cpp  SaolaConfiguration.h  SaolaDatabase.cpp  SaolaDatabase.h  StableEventDTOCreate.h  StableEventDTOGet.h  StableEventDTOUpdate.h  StableEventScheduler.cpp  StableEventScheduler.h  TelegramNotification.cpp  TelegramNotification.h  TimeUtil.h  TransferJobDTOGet.h  UnitTestsMain.cpp
Sources/Cache/: InMemoryJobCache.cpp
Sources/Config/: AppConfigRepository.cpp  AppConfigRepository.h  AppConfiguration.h  SaolaConfiguration.cpp  SaolaConfiguration.h
Sources/Controller/: RestApi.cpp  RestApi.h
Sources/DTO/: MainDicomTags.h  StableEventDTOCreate.h  StableEventDTOGet.h  StableEventDTOUpdate.h  StableEventQueuesFilter.h  TransferJobDTOCreate.h  TransferJobDTOGet.h
Sources/Database/: AppConfigDatabase.cpp  AppConfigDatabase.h  DatabaseDefinitions.h  DatabaseTypes.h  IDatabaseBackend.h  PrepareAppConfigDatabase.sql  PrepareConfigDatabase.sql  RQLite.cpp  RQLite.h  RQLiteDatabaseBackend.cpp  RQLiteDatabaseBackend.h  SQLiteDatabaseBackend.cpp  SQLiteDatabaseBackend.h
Sources/Job/: ExporterJob.cpp  ExporterJob.h  HierarchicalDirWriter.cpp  HierarchicalDirWriter.h  JobHandler.cpp
Sources/Notification/: BaseNotification.h  Notification.cpp  Notification.h
Sources/Scheduler/: PollingDBScheduler.cpp  PollingDBScheduler.h  RemoveFileScheduler.cpp  RemoveFileScheduler.h  StableEventScheduler.cpp  StableEventScheduler.h
lua-scripts/: save-to-custom-tree.lua
python-scripts/: Compare.py
